--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -17,8 +17,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/txt_toolbar_title"
         android:background="@color/transparent"
-        android:padding="8dp"
+        android:visibility="invisible"
+        android:padding="16dp"
         android:src="@drawable/ic_menu" />
+
+    <ImageView
+        android:id="@+id/btn_back"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/txt_toolbar_title"
+        android:background="@color/transparent"
+        android:src="@drawable/ic_arrow_back"
+        android:padding="16dp"
+        android:visibility="invisible"/>
 
     <TextView
         android:id="@+id/txt_toolbar_title"
